plugins {
    id 'com.android.application'
}

def EventBufferOverflowStrategy = 'michael.linker.gestureid.event.buffer.overflow.EventBufferOverflowStrategy'
def SensorDelayType = 'michael.linker.gestureid.core.sensor.sensor.type.SensorDelayType'

android {
    compileSdk 32

    defaultConfig {
        applicationId "michael.linker.gestrudeid"
        minSdk 29
        targetSdk 32
        versionCode 1
        versionName '1.0'

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        /* Shared config */
        /* Sensors */
        buildConfigField "boolean", "DEACTIVATE_ACCELEROMETER", "false"
        buildConfigField "boolean", "DEACTIVATE_GYROSCOPE", "false"
        buildConfigField "boolean", "DEACTIVATE_MAGNETOMETER", "false"
        buildConfigField "boolean", "DEACTIVATE_GRAVITY", "false"
        buildConfigField "boolean", "DEACTIVATE_LINEAR_ACCELERATION", "false"
        buildConfigField "boolean", "DEACTIVATE_ROTATION_VECTOR", "false"
        buildConfigField "boolean", "DEACTIVATE_GEOMAGNETIC_ROTATION_VECTOR", "false"
        /* Listeners */
        buildConfigField "Integer", "SENSOR_DELAY", "${SensorDelayType}.GAME"
        /* Buffer */
        buildConfigField "int", "EVENT_BUFFER_MAX_SIZE", "1000"
        buildConfigField EventBufferOverflowStrategy, "EVENT_BUFFER_OVERFLOW_STRATEGY", "${EventBufferOverflowStrategy}.RAISE_ERROR"
    }

    buildTypes {
        debug {
            /* Sensors */
            buildConfigField "boolean", "DEACTIVATE_ACCELEROMETER", "false"
            buildConfigField "boolean", "DEACTIVATE_GYROSCOPE", "false"
            buildConfigField "boolean", "DEACTIVATE_MAGNETOMETER", "false"
            buildConfigField "boolean", "DEACTIVATE_GRAVITY", "false"
            buildConfigField "boolean", "DEACTIVATE_LINEAR_ACCELERATION", "false"
            buildConfigField "boolean", "DEACTIVATE_ROTATION_VECTOR", "false"
            buildConfigField "boolean", "DEACTIVATE_GEOMAGNETIC_ROTATION_VECTOR", "false"
        }
        release {
            /* Sensors */
            buildConfigField "boolean", "DEACTIVATE_ACCELEROMETER", "false"
            buildConfigField "boolean", "DEACTIVATE_GYROSCOPE", "false"
            buildConfigField "boolean", "DEACTIVATE_MAGNETOMETER", "false"
            buildConfigField "boolean", "DEACTIVATE_GRAVITY", "false"
            buildConfigField "boolean", "DEACTIVATE_LINEAR_ACCELERATION", "false"
            buildConfigField "boolean", "DEACTIVATE_ROTATION_VECTOR", "false"
            buildConfigField "boolean", "DEACTIVATE_GEOMAGNETIC_ROTATION_VECTOR", "false"

            it.minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    buildFeatures {
        viewBinding true
        dataBinding true
    }
}

dependencies {
    def room_version = "2.4.3"

    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
    implementation "androidx.room:room-rxjava3:$room_version"

    implementation 'androidx.appcompat:appcompat:1.5.1'
    implementation 'com.google.android.material:material:1.7.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
    implementation 'androidx.navigation:navigation-fragment:2.5.3'
    implementation 'androidx.navigation:navigation-ui:2.5.3'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    implementation 'androidx.annotation:annotation:1.5.0'
    implementation 'commons-codec:commons-codec:1.15'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
}